--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "apexcharts": "^3.35.5",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.0",
+    "next-auth": "^4.10.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-github-login": "^1.0.3",
     "react-google-charts": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
